AM_CFLAGS = @CFLAGS@ -DPACKAGE_PLUGIN_DIR="\"${PACKAGE_PLUGIN_DIR}\""

SUBDIRS = u cim

wsmanincludedir = $(includedir)/openwsman
wsmaninclude_HEADERS = \
	wsman-types.h \
	wsman-names.h \
	wsman-debug.h \
	wsman-client.h  \
	wsman-client-api.h \
	wsman-xml-api.h \
	wsman-client-transport.h \
	wsman-xml-serializer.h \
	wsman-xml-serialize.h \
    	wsman-server-api.h \
	wsman-faults.h \
	wsman-soap-message.h \
	wsman-api.h \
  	wsman-xml-api.h \
	wsman-client.h \
	wsman-declarations.h \
	wsman-soap.h \
	wsman-epr.h \
	wsman-filter.h \
	wsman-soap-envelope.h \
	wsman-subscription-repository.h \
	wsman-event-pool.h \
	wsman-cimindication-processor.h

EXTRA_DIST = wsman-xml.h \
	     wsman-xml-binding.h \
	     wsman-dispatcher.h \
	     wsman-xml-serialize.h  \
	     wsman-server.h \
	     wsman-plugins.h


